--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -10,9 +10,8 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-         <!-- Favicons -->
-         <!-- Web Page Icon Added here -->
-        <!-- <link href="./img/favicon.png" rel="icon"> -->
+        <!-- Favicons -->
+        <link href="{% static 'app/images/favicon.png' %}" rel="icon">
 
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="{% static 'app/css/index.css' %}"/>
