--- a/RaisingMinds/app/static/app/css/index.css
+++ b/RaisingMinds/app/static/app/css/index.css
@@ -64,7 +64,7 @@ a:hover {
   #hero {
     width: 100%;
     height: 90vh;
-    background: url("./img/hero-bg.jpg") top left;
+    background: url(/static/app/images/hero-bg.jpg) top left;
     background-size: cover;
     position: relative;
   }
