--- a/RaisingMinds/users/templates/users/login.html
+++ b/RaisingMinds/users/templates/users/login.html
@@ -60,12 +60,13 @@
               <span class="fa fa-user"></span>
             </div>
             <h3 class="text-center mb-4">Log In</h3>
-            <form action="#" class="login-form">
+            <form action="#" class="login-form" method="post">
+            {% csrf_token %}
               <div class="form-group">
-                <input type="text" class="form-control rounded-left" placeholder="Email" required />
+                <input type="text" class="form-control rounded-left" name="email" placeholder="Email" required />
               </div>
               <div class="form-group d-flex">
-                <input type="password" class="form-control rounded-left" placeholder="Password" required />
+                <input type="password" class="form-control rounded-left" name="password1" placeholder="Password" required />
               </div>
               <div class="form-group">
                 <button type="submit" class="form-control btn btn-primary rounded submit px-3">
