--- a/RaisingMinds/users/templates/users/signup.html
+++ b/RaisingMinds/users/templates/users/signup.html
@@ -62,19 +62,20 @@
                 <span class="fa fa-user-plus"></span>
                 </div>
                 <h3 class="text-center mb-4">Sign Up</h3>
-                <form action="#" class="login-form">
+                <form action="#" class="login-form" method="post">
+                {% csrf_token %}
                 <div class="form-group">
-                    <input type="text" class="form-control rounded-left" placeholder="Username" required>
+                    <input type="text" class="form-control rounded-left" name="username" placeholder="Username" required>
                 </div>
 
                 <div class="form-group">
-                    <input type="email" class="form-control rounded-left" placeholder="Email" required>
+                    <input type="email" class="form-control rounded-left" name="email" placeholder="Email" required>
                 </div>
                 <div class="form-group d-flex">
-                    <input type="password" class="form-control rounded-left" placeholder="Password" required>
+                    <input type="password" class="form-control rounded-left" name="password1" placeholder="Password" required>
                 </div>
                 <div class="form-group d-flex">
-                    <input type="password" class="form-control rounded-left" placeholder="Confirm Password" required>
+                    <input type="password" class="form-control rounded-left" name="password2" placeholder="Confirm Password" required>
                 </div>
 
 
