--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -100,3 +100,86 @@
                 </div>
             </div>
         </section>
+        <!-- End of Section 02 -->
+
+        <!-- ======= About Section ======= -->
+        <section id="about" class="about">
+          <div class="container" data-aos="fade-up">
+    
+            <div class="section-title">
+              <h2>About Us</h2>
+              <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. </p>
+            </div>
+    
+            <div class="row content">
+              <div class="col-lg-6">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                  magna aliqua.
+                </p>
+                <ul>
+                  <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+                  <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
+                  <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+                </ul>
+              </div>
+              <div class="col-lg-6 pt-4 pt-lg-0">
+                <p>
+                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+                  culpa qui officia deserunt mollit anim id est laborum.
+                </p>
+                <a href="#" class="btn-learn-more">Learn More</a>
+              </div>
+            </div>
+    
+          </div>
+        </section><!-- End About Section -->
+    
+        <!-- ======= Counts Section ======= -->
+        <section id="counts" class="counts section-bg">
+          <div class="container">
+    
+            <div class="row justify-content-end">
+    
+              <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+                <div class="countbox">
+                  <h1 class="count" data-target="1254">0</h1>
+                  <!-- <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="2" class="purecounter"></span> -->
+                  <p>Happy Clients</p>
+                </div>
+              </div>
+    
+              <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+                <div class="countbox">
+                  <h1 class="count" data-target="140">0</h1>
+                  <!-- <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="2" class="purecounter"></span> -->
+                  <p>Projects</p>
+                </div>
+              </div>
+    
+              <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+                <div class="countbox">
+                  <h1 class="count" data-target="100">0</h1>
+                  <!-- <span data-purecounter-start="0" data-purecounter-end="30" data-purecounter-duration="2" class="purecounter"></span> -->
+                  <p>Donated Amount</p>
+                </div>
+              </div>
+    
+              <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
+                <div class="countbox">
+                  <h1 class="count" data-target="450">0</h1>
+                  <!-- <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="2" class="purecounter"></span> -->
+                  <p>Awards</p>
+                </div>
+              </div>
+    
+            </div>
+    
+          </div>
+        </section><!-- End Counts Section -->
+
+        <!-- Main JS File -->
+        <script src="./main.js"></script>
+        </body>
+</html>
