--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -180,6 +180,6 @@
         </section><!-- End Counts Section -->
 
         <!-- Main JS File -->
-        <script src="./main.js"></script>
+        <script src="{% static 'app/js/main.js' %}"></script>
         </body>
 </html>
