--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -4,14 +4,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Raiding Minds - Home</title>
+        <title>Raising Minds - Home</title>
         
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
         <!-- Favicons -->
-        <link href="{% static 'app/images/favicon.png' %}" rel="icon">
+        <link href="{% static 'app/images/RM-Icon.ico' %}" rel="icon">
 
         <!-- CSS -->
         <link rel="stylesheet" type="text/css" href="{% static 'app/css/index.css' %}"/>
@@ -36,9 +36,12 @@
             <!-- Nav -->
             <div class="navbar-nav mx-lg-auto">
                 <a class="nav-item nav-link active" href="{% url 'index' %}" aria-current="page">Home</a>
-                <a class="nav-item nav-link" href="#">Campaigns</a>
-                <a class="nav-item nav-link" href="#">Features</a>
-                <a class="nav-item nav-link" href="#">Get invloved</a>
+                <a class="nav-item nav-link" href="#">About</a>
+                <a class="nav-item nav-link" href="{% url 'projects' %}">Projects</a>
+                <!-- <a class="nav-item nav-link" href="#">Features</a> -->
+                <a class="nav-item nav-link" href="#">Team</a>
+                <a class="nav-item nav-link" href="#">Contact</a>
+                <a class="nav-item nav-link" href="#">Community</a>
             </div>
 
                 <!-- Donate button -->
@@ -56,10 +59,10 @@
         <section id="hero" class="d-flex align-items-center">
             <div class="container" data-aos="zoom-out" data-aos-delay="100">
                 <h1>Welcome to <span>Raising Minds </span></h1>
-                <h2>We are team of talented designers making websites with Bootstrap</h2>
+                <h2>Join us in building a brighter future through your generous donations.</h2>
                 <div class="d-flex">
-                  <a href="#about" class="btn-get-started scrollto">Get Started</a>
-                  <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox btn-watch-video"><i class="bi bi-play-circle"></i><span>Watch Video</span></a>
+                  <a href="#about" class="btn-get-started">Sign in</a> &nbsp;&nbsp;&nbsp;
+                  <a href="#" class="btn-watch-video"><span>Log in</span></a>
                 </div>
             </div>           
         </section>
@@ -90,7 +93,7 @@
                     <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
                   </div>
                 </div>
-        
+                
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
                   <div class="icon-box">
                     <div class="icon"><i class="ri-fingerprint-line"></i></div>
