--- a/RaisingMinds/app/templates/app/projects.html
+++ b/RaisingMinds/app/templates/app/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Raising Minds - Projects</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -33,7 +33,7 @@
                 <div class="navbar-nav mx-lg-auto">
                     <a class="nav-item nav-link active" href="{% url 'index' %}" aria-current="page">Home</a>
                     <a class="nav-item nav-link" href="#">About</a>
-                    <a class="nav-item nav-link" href="#">Projects</a>
+                    <a class="nav-item nav-link" href="{% url 'projects' %}">Projects</a>
                     <a class="nav-item nav-link" href="#">Team</a>
                     <a class="nav-item nav-link" href="#">Contact</a>
                     <a class="nav-item nav-link" href="#">Community</a>
