project urls, method

--- a/RaisingMinds/app/templates/app/projects.html
+++ b/RaisingMinds/app/templates/app/projects.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,7 +13,7 @@
     <link href="./img/RM-Icon.ico" rel="icon">
 
     <!-- Css  -->
-    <link rel="stylesheet" href="./projects.css">
+    <link rel="stylesheet" href="{% static 'app/css/projects.css' %}">
 </head>
 <body>
     <!-- Navigation bar -->
