--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -41,7 +41,10 @@
                 <!-- <a class="nav-item nav-link" href="#">Features</a> -->
                 <a class="nav-item nav-link" href="#">Team</a>
                 <a class="nav-item nav-link" href="#">Contact</a>
+                {% if user.is_authenticated %}
                 <a class="nav-item nav-link" href="#">Community</a>
+                {% else %}
+                {% endif %}
             </div>
 
                 <!-- Donate button -->
@@ -60,10 +63,13 @@
             <div class="container" data-aos="zoom-out" data-aos-delay="100">
                 <h1>Welcome to <span>Raising Minds </span></h1>
                 <h2>Join us in building a brighter future through your generous donations.</h2>
+                {% if user.is_authenticated %}
+                {% else %}
                 <div class="d-flex">
-                  <a href="#about" class="btn-get-started">Sign in</a> &nbsp;&nbsp;&nbsp;
-                  <a href="#" class="btn-watch-video"><span>Log in</span></a>
+                  <a href="{% url 'login' %}" class="btn-get-started">Sign in</a> &nbsp;&nbsp;&nbsp;
+                  <a href="{% url 'signup' %}" class="btn-watch-video"><span>Log in</span></a>
                 </div>
+                {% endif %}
             </div>           
         </section>
         <!--End of Hero Section -->
