--- a/RaisingMinds/app/templates/app/projects.html
+++ b/RaisingMinds/app/templates/app/projects.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 
     <!-- Favicons -->
-    <link href="./img/RM-Icon.ico" rel="icon">
+    <link href="{% static 'app/images/RM-Icon.ico' %}" rel="icon">
 
     <!-- Css  -->
     <link rel="stylesheet" href="{% static 'app/css/projects.css' %}">
@@ -32,9 +32,9 @@
             <div class="collapse navbar-collapse backGround" id="navbarCollapse">
                 <!-- Nav -->
                 <div class="navbar-nav mx-lg-auto">
-                    <a class="nav-item nav-link active" href="{% url 'index' %}" aria-current="page">Home</a>
+                    <a class="nav-item nav-link" href="{% url 'index' %}" aria-current="page">Home</a>
                     <a class="nav-item nav-link" href="#">About</a>
-                    <a class="nav-item nav-link" href="{% url 'projects' %}">Projects</a>
+                    <a class="nav-item nav-link active" href="{% url 'projects' %}">Projects</a>
                     <a class="nav-item nav-link" href="#">Team</a>
                     <a class="nav-item nav-link" href="#">Contact</a>
                     <a class="nav-item nav-link" href="#">Community</a>
@@ -65,6 +65,283 @@
     </section>
     <!--End of Hero Section -->
 
+    <!-- Ongoing Projects Section -->
+    <section class="projects" id="ongoing" class="projects section-bg">
+        <div class="container" data-aos="fade-up">
+
+          <div class="section-title">
+            <h2>Ongoing Projects</h2>
+            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box">
+                <div class="project-image">
+                  <img src="./img/02.jpg">
+                </div>
+                <h4><a href="">Lorem Ipsum</a></h4>
+                <p>Voluptatum deleniti atque corrupti Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et quisquam maxime impedit ri</p>
+                <div class="progressbar">
+                  <h4>Progress</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-6">
+                        <p>Goal : LKR 100000</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p>Current : LKR 100000</p>
+                    </div>
+                </div>
+                <button type="button" class="btn donate btn-outline-primary">Donate</button>
+              </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+              <div class="icon-box">
+                <div class="project-image">
+                  <img src="./img/02.jpg">
+                </div>
+                <h4><a href="">Sed Perspiciatis</a></h4>
+                <p>Duis aute irure dolor in reprehenderit in voluptate loefbj njsdfgn njg njsdf efsdef dsfsdf sdfsdf velit esse cillum dolore</p>
+                <div class="progressbar">
+                  <h4>Progress</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-6">
+                        <p>Goal : LKR 100000</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p>Current : LKR 100000</p>
+                    </div>
+                </div>
+                <button type="button" class="btn donate btn-outline-primary">Donate</button>
+              </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+              <div class="icon-box">
+                <div class="project-image">
+                  <img src="./img/02.jpg">
+                </div>
+                <h4><a href="">Magni Dolores</a></h4>
+                <p>Excepteur sint occaecat cupidatat non proident, suntrg ert jkfjg lkjf klkfg klkl fdf efef dfdf in culpa qui officia</p>
+                <div class="progressbar">
+                  <h4>Progress</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-6">
+                        <p>Goal : LKR 100000</p>
+                    </div>
+                    <div class="col-sm-6">
+                        <p>Current : LKR 100000</p>
+                    </div>
+                </div>
+                <button type="button" class="btn donate btn-outline-primary">Donate</button>
+              </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </section><!-- End Ongoing Projects Section -->
+
+      <!-- Completed Projects Section -->
+      <section class="projects" id="completed" class="projects section-bg">
+        <div class="container" data-aos="fade-up">
+
+          <div class="section-title">
+            <h2>Completed Projects</h2>
+            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box">
+                <div class="project-image">
+                  <img src="./img/02.jpg">
+                </div>
+                <h4><a href="">Lorem Ipsum</a></h4>
+                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                <div class="progressbar">
+                  <h4>Progress</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                  </div>
+                  <p class="donate-text text-center">Goal : LKR 100000</p>
+                  <p class="donate-text text-center">Completed</p>
+                </div>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+              <div class="icon-box">
+                <div class="project-image">
+                  <img src="./img/02.jpg">
+                </div>
+                <h4><a href="">Sed Perspiciatis</a></h4>
+                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                <div class="progressbar">
+                  <h4>Progress</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                  </div>
+                  <p class="donate-text text-center">Goal : LKR 100000</p>
+                  <p class="donate-text text-center">Completed</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+              <div class="icon-box">
+                <div class="project-image">
+                  <img src="./img/02.jpg">
+                </div>
+                <h4><a href="">Magni Dolores</a></h4>
+                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                <div class="progressbar">
+                  <h4>Progress</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                  </div>
+                  <p class="donate-text text-center">Goal : LKR 100000</p>
+                  <p class="donate-text text-center">Completed</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
+              <div class="icon-box">
+                <div class="project-image">
+                  <img src="./img/02.jpg">
+                </div>
+                <h4><a href="">Nemo Enim</a></h4>
+                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                <div class="progressbar">
+                  <h4>Progress</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                  </div>
+                  <p class="donate-text text-center">Goal : LKR 100000</p>
+                  <p class="donate-text text-center">Completed</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
+              <div class="icon-box">
+                <div class="project-image">
+                  <img src="./img/02.jpg">
+                </div>
+                <h4><a href="">Dele Cardo</a></h4>
+                <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+                <div class="progressbar">
+                  <h4>Progress</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                  </div>
+                  <p class="donate-text text-center">Goal : LKR 100000</p>
+                  <p class="donate-text text-center">Completed</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
+              <div class="icon-box">
+                <div class="project-image">
+                  <img src="./img/02.jpg">
+                </div>
+                <h4><a href="">Divera Don</a></h4>
+                <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+                <div class="progressbar">
+                  <h4>Progress</h4>
+                  <div class="progress">
+                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                  </div>
+                  <p class="donate-text text-center">Goal : LKR 100000</p>
+                  <p class="donate-text text-center">Completed</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section><!-- End Completed Projects Section -->
+
+      <!-- ======= Footer ======= -->
+      <footer id="footer">
+
+        <div class="footer-top">
+          <div class="container">
+            <div class="row">
+
+              <div class="col-lg-3 col-md-6 footer-contact">
+                <h3>Raising Minds</h3>
+                <p>
+                  A108 Adam Street <br>
+                  New York, NY 535022<br>
+                  United States <br><br>
+                  <strong>Phone:</strong> +1 5589 55488 55<br>
+                  <strong>Email:</strong> info@example.com<br>
+                </p>
+              </div>
+
+              <div class="col-lg-2 col-md-6 footer-links">
+                <h4>Useful Links</h4>
+                <ul>
+                  <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+                </ul>
+              </div>
+
+              <div class="col-lg-3 col-md-6 footer-links">
+                <h4>Our Services</h4>
+                <ul>
+                  <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
+                  <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+                </ul>
+              </div>
+
+              <div class="col-lg-4 col-md-6 footer-newsletter">
+                <h4>Join Our Newsletter</h4>
+                <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+                <form action="" method="post">
+                  <input type="email" name="email"><input type="submit" value="Subscribe">
+                </form>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div id="rights">
+          <div class="container d-md-flex py-4">
+
+            <div  class="me-md-auto text-center text-md-start">
+              <div class="copyright">
+                &copy; Copyright <strong><span>Raising Minds</span></strong>. All Rights Reserved
+              </div>
+              <div class="credits">
+                Designed by <a href=""> &lt;Coding Hamsters/&gt; </a>
+              </div>
+            </div>
+           
+          </div>
+        </div>
+      </footer><!-- End Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
