--- a/RaisingMinds/app/templates/app/projects.html
+++ b/RaisingMinds/app/templates/app/projects.html
@@ -78,7 +78,7 @@
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon-box">
                 <div class="project-image">
-                  <img src="./img/02.jpg">
+                  <img src="{% static "app/images/school.jpg" %}">
                 </div>
                 <h4><a href="">Lorem Ipsum</a></h4>
                 <p>Voluptatum deleniti atque corrupti Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et quisquam maxime impedit ri</p>
