--- a/RaisingMinds/app/templates/app/projects.html
+++ b/RaisingMinds/app/templates/app/projects.html
@@ -167,7 +167,7 @@
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon-box">
                 <div class="project-image">
-                  <img src="{% static "app/images/school.jpg" %}">
+                  <img src="./img/02.jpg">
                 </div>
                 <h4><a href="">Lorem Ipsum</a></h4>
                 <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
@@ -185,7 +185,7 @@
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon-box">
                 <div class="project-image">
-                  <img src="{% static "app/images/school.jpg" %}">
+                  <img src="./img/02.jpg">
                 </div>
                 <h4><a href="">Sed Perspiciatis</a></h4>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
@@ -203,7 +203,7 @@
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon-box">
                 <div class="project-image">
-                  <img src="{% static "app/images/school.jpg" %}>
+                  <img src="./img/02.jpg">
                 </div>
                 <h4><a href="">Magni Dolores</a></h4>
                 <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
@@ -221,7 +221,7 @@
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon-box">
                 <div class="project-image">
-                  <img src="{% static "app/images/school.jpg" %}">
+                  <img src="./img/02.jpg">
                 </div>
                 <h4><a href="">Nemo Enim</a></h4>
                 <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
@@ -239,7 +239,7 @@
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon-box">
                 <div class="project-image">
-                  <img src="{% static "app/images/school.jpg" %}">
+                  <img src="./img/02.jpg">
                 </div>
                 <h4><a href="">Dele Cardo</a></h4>
                 <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
@@ -257,7 +257,7 @@
             <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon-box">
                 <div class="project-image">
-                  <img src="{% static "app/images/school.jpg" %}">
+                  <img src="./img/02.jpg">
                 </div>
                 <h4><a href="">Divera Don</a></h4>
                 <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
