--- a/RaisingMinds/users/templates/users/login.html
+++ b/RaisingMinds/users/templates/users/login.html
@@ -10,6 +10,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
+    <!-- Favicons -->
+    <link href="{% static 'app/images/RM-Icon.ico' %}" rel="icon">
+
+    <!-- CSS -->
     <link rel="stylesheet" type="text/css" href="{% static 'users/css/login.css' %}"/>
    
 </head>
