--- a/RaisingMinds/users/templates/users/login.html
+++ b/RaisingMinds/users/templates/users/login.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in</title>
     
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -53,10 +54,10 @@
     </div>
   </nav>
   <!-- end of nav bar -->
-
+<br>
     <!-- login form sction -->
   <section class="ftco-section mt-4">
-    <div class="container">
+    <div class="container loginForm">
       <div class="row justify-content-center">
         <div class="col-md-7 col-lg-5">
           <div class="login-wrap p-4 p-md-5">
