--- a/RaisingMinds/users/templates/users/signup.html
+++ b/RaisingMinds/users/templates/users/signup.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up</title>
 
+    <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -59,7 +60,7 @@
 
     <!-- sign up form -->
     <section class="ftco-section mt-5">
-        <div class="container">
+        <div class="container signupForm">
         <div class="row justify-content-center">
             <div class="col-md-7 col-lg-5">
             <div class="login-wrap p-4 p-md-5">
@@ -82,8 +83,6 @@
                 <div class="form-group d-flex">
                     <input type="password" class="form-control rounded-left" name="password2" placeholder="Confirm Password" required>
                 </div>
-
-
 
                 <div class="form-group">
                     <button type="submit" class="form-control btn btn-primary rounded submit px-3">Sign Up</button>
