forget-password page

--- a/RaisingMinds/users/templates/users/login.html
+++ b/RaisingMinds/users/templates/users/login.html
@@ -87,7 +87,7 @@
                   </div>
                 </div>
                 <div class="col-sm-6">
-                  <a href="#" class="float-end text-primary">Forgot Password?</a>
+                  <a href="{% url 'forget_password'%}" class="float-end text-primary">Forgot Password?</a>
                 </div>
               </div>
               <br />
