update forget-password CSS

--- a/RaisingMinds/users/templates/users/forget-password.html
+++ b/RaisingMinds/users/templates/users/forget-password.html
@@ -13,16 +13,13 @@
         </div>
         {% endfor %}
         {% endif %}
-
      
         <div class="form-group">
-            <label for="password">Email</label>
+            <label for="password">Enter Your E-mail</label>
             <input type="email" name="email"  class="form-control">
            
         </div>
 
-        
-       
         <button class="btn" type="submit">Submit</button>
 
     </form>
