Updates in index.css
Add css Section general  to the index.css

--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -67,7 +67,7 @@
                   <a href="{% url 'logout' %}" class="btn-get-started">Logout</a> &nbsp;&nbsp;&nbsp;
                 {% else %}
                 <div class="d-flex">
-                  <a href="{% url 'login' %}" class="btn-get-started">Sign in</a> &nbsp;&nbsp;&nbsp;
+                  <a href="{% url 'login' %}" class="btn-get-started">Sign up</a> &nbsp;&nbsp;&nbsp;
                   <a href="{% url 'signup' %}" class="btn-watch-video"><span>Log in</span></a>
                 </div>
                 {% endif %}
@@ -80,32 +80,32 @@
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
                   <div class="icon-box">
                     <div class="icon"><i class="ri-stack-line"></i></div>
-                    <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-                    <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                    <h4 class="title"><a href="">Donate Footware</a></h4>
+                    <p class="description">We have donated more than 1,200 pairs of shoes and socks over 9 schools</p>
                   </div>
                 </div>
         
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
                   <div class="icon-box">
                     <div class="icon"><i class="ri-palette-line"></i></div>
-                    <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-                    <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                    <h4 class="title"><a href="">Donate Library Books</a></h4>
+                    <p class="description">We have donated used books to two schools by conducting a social media campaign</p>
                   </div>
                 </div>
         
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
                   <div class="icon-box">
                     <div class="icon"><i class="ri-command-line"></i></div>
-                    <h4 class="title"><a href="">Magni Dolores</a></h4>
-                    <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                    <h4 class="title"><a href="">Donate Computers</a></h4>
+                    <p class="description">We have already donated 30+ used PCs</p>
                   </div>
                 </div>
                 
                 <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
                   <div class="icon-box">
                     <div class="icon"><i class="ri-fingerprint-line"></i></div>
-                    <h4 class="title"><a href="">Nemo Enim</a></h4>
-                    <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                    <h4 class="title"><a href="">Build Class Rooms and IT Labs</a></h4>
+                    <p class="description">Setting up an IT lab and extending support for class room renovations</p>
                   </div>
                 </div>
             </div>
@@ -118,31 +118,26 @@
     
             <div class="section-title">
               <h2>About Us</h2>
-              <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. </p>
-            </div>
-    
+              <p>At Raising Minds, we are dedicated to revolutionizing education, driven by a shared commitment to empower learners, foster innovation, and create a transformative impact in communities worldwide.</p>
+            </div> 
             <div class="row content">
               <div class="col-lg-6">
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
-                </p>
-                <ul>
-                  <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-                  <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-                  <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-                </ul>
+                <div class="pt-4 pt-lg-0">
+                  Welcome to Raising Minds, where our commitment to transforming 
+                  education fuels our passion for a brighter future. Founded on 
+                  the belief that every child deserves access to quality learning, we embark on a mission to redefine educational landscapes. Our journey is marked by a dedicated team of educators, innovators, and supporters who share a common vision: to empower students and communities through knowledge.
+                </div>
               </div>
               <div class="col-lg-6 pt-4 pt-lg-0">
                 <p>
-                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                  culpa qui officia deserunt mollit anim id est laborum.
+                  At Raising Minds, we believe in the power of education to unlock 
+                  potential and break barriers. Guided by this principle, we 
+                  tirelessly work on diverse projects that span from enhancing 
+                  infrastructure to implementing innovative teaching methodologies.                  
                 </p>
                 <a href="#" class="btn-learn-more">Learn More</a>
               </div>
             </div>
-    
           </div>
         </section><!-- End About Section -->
     
