--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -184,6 +184,73 @@
           </div>
         </section><!-- End Counts Section -->
 
+        <!-- ======= Footer ======= -->
+        <footer id="footer">
+
+          <div class="footer-top">
+            <div class="container">
+              <div class="row">
+
+                <div class="col-lg-3 col-md-6 footer-contact">
+                  <h3>Raising Minds</h3>
+                  <p>
+                    Matara <br>
+                    Sri Lanka<br>
+                    <br>
+                    <strong>Phone:</strong> +9478 273 9316<br>
+                    <strong>Email:</strong> raisingmindsfoundation</br>
+                    @gmail.com<br>
+                  </p>
+                </div>
+
+                <div class="col-lg-2 col-md-6 footer-links">
+                  <h4>Useful Links</h4>
+                  <ul>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">About</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Projects</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Team</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Contact</a></li>
+                  </ul>
+                </div>
+
+                <div class="col-lg-3 col-md-6 footer-links">
+                  <h4>Others</h4>
+                  <ul>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Create School Profile</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Create Post</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
+                    <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+                  </ul>
+                </div>
+
+                <div class="col-lg-4 col-md-6 footer-newsletter">
+                  <h4>Join Our Newsletter</h4>
+                  <p>Stay connected with our mission and be the first to know about upcoming projects, events, and opportunities to make a difference</p>
+                  <form action="" method="post">
+                    <input type="email" name="email"><input type="submit" value="Subscribe">
+                  </form>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+          <div id="rights">
+            <div class="container d-md-flex py-4">
+
+              <div  class="me-md-auto text-center text-md-start">
+                <div class="copyright">
+                  &copy; Copyright <strong><span>Raising Minds</span></strong>. All Rights Reserved
+                </div>
+                <div class="credits">
+                  Designed by <a href=""> &lt;Coding Hamsters/&gt; </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </footer><!-- End Footer -->
+
         <!-- Main JS File -->
         <script src="{% static 'app/js/main.js' %}"></script>
         </body>
