Updates in Project
Updated Ongoing & Completed sections in project. html file, Removed footer from project.html

--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -151,7 +151,7 @@
                 <div class="countbox">
                   <h1 class="count" data-target="1254">0</h1>
                   <!-- <span data-purecounter-start="0" data-purecounter-end="65" data-purecounter-duration="2" class="purecounter"></span> -->
-                  <p>Happy Clients</p>
+                  <p>Happy Donaters</p>
                 </div>
               </div>
     
@@ -159,7 +159,7 @@
                 <div class="countbox">
                   <h1 class="count" data-target="140">0</h1>
                   <!-- <span data-purecounter-start="0" data-purecounter-end="85" data-purecounter-duration="2" class="purecounter"></span> -->
-                  <p>Projects</p>
+                  <p>Projects Completed</p>
                 </div>
               </div>
     
@@ -167,7 +167,7 @@
                 <div class="countbox">
                   <h1 class="count" data-target="100">0</h1>
                   <!-- <span data-purecounter-start="0" data-purecounter-end="30" data-purecounter-duration="2" class="purecounter"></span> -->
-                  <p>Donated Amount</p>
+                  <p>Schools Helped</p>
                 </div>
               </div>
     
@@ -175,7 +175,7 @@
                 <div class="countbox">
                   <h1 class="count" data-target="450">0</h1>
                   <!-- <span data-purecounter-start="0" data-purecounter-end="20" data-purecounter-duration="2" class="purecounter"></span> -->
-                  <p>Awards</p>
+                  <p>Toal Funds Raised</p>
                 </div>
               </div>
     
