--- a/RaisingMinds/app/templates/app/projects.html
+++ b/RaisingMinds/app/templates/app/projects.html
@@ -71,7 +71,7 @@
 
           <div class="section-title">
             <h2>Ongoing Projects</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <p>Embark on a journey with us as we forge ahead with passion and dedication in our ongoing projects, working tirelessly to bring positive change and elevate the educational landscape for future generations.</p>
           </div>
 
           <div class="row">
@@ -80,8 +80,8 @@
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
                 </div>
-                <h4><a href="">Lorem Ipsum</a></h4>
-                <p>Voluptatum deleniti atque corrupti Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et quisquam maxime impedit ri</p>
+                <h4><a href="">Montessori in Kakirewa</a></h4>
+                <p>Bogaswewa Samadhi Montessori with nearly 28 children had no place to learn.</p>
                 <div class="progressbar">
                   <h4>Progress</h4>
                   <div class="progress">
@@ -92,7 +92,7 @@
                         <p>Goal : LKR 100000</p>
                     </div>
                     <div class="col-sm-6">
-                        <p>Current : LKR 100000</p>
+                        <p>Current : LKR 35,000</p>
                     </div>
                 </div>
                 <button type="button" class="btn donate btn-outline-primary">Donate</button>
@@ -105,8 +105,8 @@
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
                 </div>
-                <h4><a href="">Sed Perspiciatis</a></h4>
-                <p>Duis aute irure dolor in reprehenderit in voluptate loefbj njsdfgn njg njsdf efsdef dsfsdf sdfsdf velit esse cillum dolore</p>
+                <h4><a href="">Ukwatta Maha Vidyalaya</a></h4>
+                <p>Rebuilding the Drinking water supply and collecting funds for a Science Lab.</p>
                 <div class="progressbar">
                   <h4>Progress</h4>
                   <div class="progress">
@@ -117,7 +117,7 @@
                         <p>Goal : LKR 100000</p>
                     </div>
                     <div class="col-sm-6">
-                        <p>Current : LKR 100000</p>
+                        <p>Current : LKR 50,000</p>
                     </div>
                 </div>
                 <button type="button" class="btn donate btn-outline-primary">Donate</button>
@@ -130,8 +130,8 @@
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
                 </div>
-                <h4><a href="">Magni Dolores</a></h4>
-                <p>Excepteur sint occaecat cupidatat non proident, suntrg ert jkfjg lkjf klkfg klkl fdf efef dfdf in culpa qui officia</p>
+                <h4><a href="">Meegoda Kanishta Vidyalaya (Primary School)</a></h4>
+                <p>Collecting funds for a Computer Lab.</p>
                 <div class="progressbar">
                   <h4>Progress</h4>
                   <div class="progress">
@@ -142,7 +142,7 @@
                         <p>Goal : LKR 100000</p>
                     </div>
                     <div class="col-sm-6">
-                        <p>Current : LKR 100000</p>
+                        <p>Current : LKR 25,000</p>
                     </div>
                 </div>
                 <button type="button" class="btn donate btn-outline-primary">Donate</button>
@@ -160,7 +160,7 @@
 
           <div class="section-title">
             <h2>Completed Projects</h2>
-            <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+            <p>Witness the tangible results of our collective efforts in education, as we proudly present a gallery of successfully completed projects that have enriched the learning experience for countless students.</p>
           </div>
 
           <div class="row">
@@ -169,12 +169,12 @@
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
                 </div>
-                <h4><a href="">Lorem Ipsum</a></h4>
-                <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+                <h4><a href="">Narandeniya Kanishta Vidyalaya (Primary School)</a></h4>
+                <p>Collecting funds for a Computer Lab.</p>
                 <div class="progressbar">
                   <h4>Progress</h4>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
                   </div>
                   <p class="donate-text text-center">Goal : LKR 100000</p>
                   <p class="donate-text text-center">Completed</p>
@@ -187,12 +187,12 @@
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
                 </div>
-                <h4><a href="">Sed Perspiciatis</a></h4>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+                <h4><a href="">Glenanore Tamil maha Vidyalayam</a></h4>
+                <p>Collecting funds for a Computer Lab.</p>
                 <div class="progressbar">
                   <h4>Progress</h4>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
                   </div>
                   <p class="donate-text text-center">Goal : LKR 100000</p>
                   <p class="donate-text text-center">Completed</p>
@@ -205,12 +205,12 @@
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
                 </div>
-                <h4><a href="">Magni Dolores</a></h4>
-                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+                <h4><a href="">Montessori in Horowpathana</a></h4>
+                <p>Rebuilding the Drinking water supply and collecting funds for a Playground.</p>
                 <div class="progressbar">
                   <h4>Progress</h4>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
                   </div>
                   <p class="donate-text text-center">Goal : LKR 100000</p>
                   <p class="donate-text text-center">Completed</p>
@@ -223,12 +223,12 @@
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
                 </div>
-                <h4><a href="">Nemo Enim</a></h4>
-                <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+                <h4><a href="">Hindu Vidyalaya - Matale</a></h4>
+                <p>Rebuilding the Drinking water supply and collecting funds for a Science Lab.</p>
                 <div class="progressbar">
                   <h4>Progress</h4>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
                   </div>
                   <p class="donate-text text-center">Goal : LKR 100000</p>
                   <p class="donate-text text-center">Completed</p>
@@ -241,12 +241,12 @@
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
                 </div>
-                <h4><a href="">Dele Cardo</a></h4>
-                <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+                <h4><a href="">Kasbawewa Kanishta Vidyalaya</a></h4>
+                <p>Rebuilding the Drinking water supply and collecting funds for a Science Lab.</p>
                 <div class="progressbar">
                   <h4>Progress</h4>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
                   </div>
                   <p class="donate-text text-center">Goal : LKR 100000</p>
                   <p class="donate-text text-center">Completed</p>
@@ -259,12 +259,12 @@
                 <div class="project-image">
                   <img src="{% static "app/images/school.jpg" %}">
                 </div>
-                <h4><a href="">Divera Don</a></h4>
-                <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+                <h4><a href="">Madagama Royal College</a></h4>
+                <p>Rebuilding the Drinking water supply and collecting funds for a Science Lab.</p>
                 <div class="progressbar">
                   <h4>Progress</h4>
                   <div class="progress">
-                    <div class="progress-bar" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 100%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">100%</div>
                   </div>
                   <p class="donate-text text-center">Goal : LKR 100000</p>
                   <p class="donate-text text-center">Completed</p>
@@ -275,73 +275,6 @@
         </div>
       </section><!-- End Completed Projects Section -->
 
-      <!-- ======= Footer ======= -->
-      <footer id="footer">
-
-        <div class="footer-top">
-          <div class="container">
-            <div class="row">
-
-              <div class="col-lg-3 col-md-6 footer-contact">
-                <h3>Raising Minds</h3>
-                <p>
-                  A108 Adam Street <br>
-                  New York, NY 535022<br>
-                  United States <br><br>
-                  <strong>Phone:</strong> +1 5589 55488 55<br>
-                  <strong>Email:</strong> info@example.com<br>
-                </p>
-              </div>
-
-              <div class="col-lg-2 col-md-6 footer-links">
-                <h4>Useful Links</h4>
-                <ul>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-                </ul>
-              </div>
-
-              <div class="col-lg-3 col-md-6 footer-links">
-                <h4>Our Services</h4>
-                <ul>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-                  <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-                </ul>
-              </div>
-
-              <div class="col-lg-4 col-md-6 footer-newsletter">
-                <h4>Join Our Newsletter</h4>
-                <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-                <form action="" method="post">
-                  <input type="email" name="email"><input type="submit" value="Subscribe">
-                </form>
-              </div>
-
-            </div>
-          </div>
-        </div>
-
-        <div id="rights">
-          <div class="container d-md-flex py-4">
-
-            <div  class="me-md-auto text-center text-md-start">
-              <div class="copyright">
-                &copy; Copyright <strong><span>Raising Minds</span></strong>. All Rights Reserved
-              </div>
-              <div class="credits">
-                Designed by <a href=""> &lt;Coding Hamsters/&gt; </a>
-              </div>
-            </div>
-           
-          </div>
-        </div>
-      </footer><!-- End Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
