Ongoing Project Section
Added Ongoing Project Section to index

--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -188,6 +188,95 @@
           </div>
         </section><!-- End Counts Section -->
 
+        <!-- Ongoing Projects Section -->
+        <section class="projects" id="ongoing" class="projects section-bg">
+          <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+              <h2>Ongoing Projects</h2>
+              <p>Embark on a journey with us as we forge ahead with passion and dedication in our ongoing projects, working tirelessly to bring positive change and elevate the educational landscape for future generations.</p>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+                <div class="icon-box">
+                  <div class="project-image">
+                    <img src="{% static "app/images/school.jpg" %}">
+                  </div>
+                  <h4><a href="">Montessori in Kakirewa</a></h4>
+                  <p>Bogaswewa Samadhi Montessori with nearly 28 children had no place to learn.</p>
+                  <div class="progressbar">
+                    <h4>Progress</h4>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">35%</div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                          <p>Goal : LKR 100000</p>
+                      </div>
+                      <div class="col-sm-6">
+                          <p>Current : LKR 35,000</p>
+                      </div>
+                  </div>
+                  <button type="button" class="btn donate btn-outline-primary">Donate</button>
+                </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
+                <div class="icon-box">
+                  <div class="project-image">
+                    <img src="{% static "app/images/school.jpg" %}">
+                  </div>
+                  <h4><a href="">Ukwatta Maha Vidyalaya</a></h4>
+                  <p>Rebuilding the Drinking water supply and collecting funds for a Science Lab.</p>
+                  <div class="progressbar">
+                    <h4>Progress</h4>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                          <p>Goal : LKR 100,000</p>
+                      </div>
+                      <div class="col-sm-6">
+                          <p>Current : LKR 50,000</p>
+                      </div>
+                  </div>
+                  <button type="button" class="btn donate btn-outline-primary">Donate</button>
+                </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0" data-aos="zoom-in" data-aos-delay="300">
+                <div class="icon-box">
+                  <div class="project-image">
+                    <img src="{% static "app/images/school.jpg" %}">
+                  </div>
+                  <h4><a href="">Meegoda Kanishta Vidyalaya (Primary School)</a></h4>
+                  <p>Collecting funds for a Computer Lab.</p>
+                  <div class="progressbar">
+                    <h4>Progress</h4>
+                    <div class="progress">
+                      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
+                    </div>
+                    <div class="row">
+                      <div class="col-sm-6">
+                          <p>Goal : LKR 100000</p>
+                      </div>
+                      <div class="col-sm-6">
+                          <p>Current : LKR 25,000</p>
+                      </div>
+                  </div>
+                  <button type="button" class="btn donate btn-outline-primary">Donate</button>
+                </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </section><!-- End Ongoing Projects Section -->
+
         {% endblock %}
 
         <!-- ======= Footer ======= -->
