--- a/RaisingMinds/app/static/app/css/index.css
+++ b/RaisingMinds/app/static/app/css/index.css
@@ -253,8 +253,6 @@ section {
   #section-02 .icon-box:hover .title a {
     color: #2487ce;
   }
-  
- 
 
 /*--------------------------------------------------------------
 # About
@@ -343,7 +341,60 @@ section {
     color: #1e6ca6;
   }
 
-  /*--------------------------------------------------------------
+/*--------------------------------------------------------------
+# Projects
+--------------------------------------------------------------*/
+.projects .icon-box {
+  text-align: center;
+  padding: 40px 20px 80px 20px;
+  transition: all ease-in-out 0.3s;
+  background: #fff;
+  box-shadow: 0px 5px 90px 0px rgba(110, 123, 131, 0.05);
+}
+
+.projects .icon-box .icon {
+  margin: 0 auto;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: ease-in-out 0.3s;
+  position: relative;
+}
+
+.project-image img{
+  height: 40%;
+  width: 100%;
+}
+
+.projects .icon-box h4 {
+  font-weight: 600;
+  margin: 10px 0 15px 0;
+  font-size: 22px;
+}
+
+.projects .icon-box h4 a {
+  color: #124265;
+  transition: ease-in-out 0.3s;
+}
+
+.projects .icon-box p {
+  line-height: 24px;
+  font-size: 14px;
+  margin-bottom: 0;
+}
+
+.donate {
+  margin-top: 20px;
+}
+
+.projects .icon-box:hover {
+  border-color: #fff;
+  box-shadow: 0px 0 35px 0 rgba(0, 0, 0, 0.08);
+}
+
+/*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
 #footer {
