--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -72,7 +72,8 @@
                 {% else %}
                 <div class="d-flex">
                   <a href="{% url 'login' %}" class="btn-get-started">Sign up</a> &nbsp;&nbsp;&nbsp;
-                  <a href="{% url 'signup' %}" class="btn-watch-video"><span>Log in</span></a>
+                  <button type="button" href="{% url 'signup' %}" class="btn log-in btn-outline-primary">Log in</button>
+                  <!-- <a href="{% url 'signup' %}" class="btn-watch-video"><span>Log in</span></a> -->
                 </div>
                 {% endif %}
             </div>           
