--- a/RaisingMinds/app/static/app/css/projects.css
+++ b/RaisingMinds/app/static/app/css/projects.css
@@ -71,7 +71,7 @@ html{
     #hero {
       width: 100%;
       height: 100vh;
-      background: url("/static/app/images/projects-bg.jpg") top left;
+      background: url("/static/app/images/bg.jpg") top left;
       background-size: cover;
       position: relative;
     }
