--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -103,6 +103,45 @@
         </section>
         <!--End of Hero Section -->
 
+        <section id="box" class="d-flex align-items-center">
+        <div class="container position-relative" data-aos="fade-up" data-aos-delay="100">
+          <div class="row icon-boxes">
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
+              <div class="icon-box">
+                <div class="icon"><i class="fa fa-gift"></i></div>
+                <h4 class="title text-center"><a href="">Donate Footware</a></h4>
+                <p class="description">We have donated more than 1,200 pairs of shoes and socks over 9 schools</p>
+              </div>
+            </div>
+    
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
+              <div class="icon-box">
+                <div class="icon"><i class="fa fa-file-text-o"></i></div>
+                <h4 class="title text-center"><a href="">Donate Library Books</a></h4>
+                <p class="description text-center">We have donated used books to two schools by conducting a social media campaign</p>
+              </div>
+            </div>
+    
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
+              <div class="icon-box">
+                <div class="icon"><i class="fas fa-desktop"></i></div>
+                <h4 class="title text-center"><a href="">Donate Computers</a></h4>
+                <p class="description text-center">We have already donated 30+ used PCs to 30+ Schools by conducting a social media campaign</p>
+              </div>
+            </div>
+    
+            <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
+              <div class="icon-box">
+                <div class="icon"><i class="fa fa-handshake-o"></i></div>
+                <h4 class="title text-center"><a href="">Build Class Rooms and IT Labs</a></h4>
+                <p class="description text-center">Setting up an IT lab and extending support for class room renovations</p>
+              </div>
+            </div>
+    
+          </div>
+        </div>
+        </section><!-- End of Box Section -->
+
         <!-- ======= About Section ======= -->
         <section id="about" class="about">
           <div class="container" data-aos="fade-up">
