--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -214,6 +214,8 @@
           </div>
         </section><!-- End Counts Section -->
 
+        
+
         <!-- Ongoing Projects Section -->
         <section class="projects" id="ongoing"  class="projects section-bg">
 
@@ -315,7 +317,8 @@
           {% endcomment %}
 
           </div>
-        </section><!-- End Ongoing Projects Section -->
+        </section>
+        <!-- End Ongoing Projects Section -->
 
         <!-- ======= Team Section ======= -->
       <section id="team" class="team section-bg">
